Le chrono marche

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>RandoriZator</title>
@@ -10,12 +11,18 @@
 	<div class="container">
 		<header>
 			<h1>Consigne</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur neque atque suscipit assumenda ratione esse error ad dicta mollitia quia, minima cupiditate laborum cumque rem. Doloribus cupiditate dicta vero.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur neque atque suscipit
+				assumenda ratione esse error ad dicta mollitia quia, minima cupiditate laborum cumque rem. Doloribus
+				cupiditate dicta vero.</p>
 		</header>
 
 		<div>
-			<div id="jauge">Jauge<div id="chrono">Chrono</div></div>
-			
+			<div id="compteur">5:00</div>
+			<div id="jauge">
+				<div id="prog"></div>
+			</div>
+			<button id="lancer">Lancer</button>
+
 			<div id="roles" class="container2">
 				<div class="role" id="uke">
 					<h3>UKE</h3>
@@ -34,10 +41,10 @@
 				<div class="joueurn" id="joueur1">Name 1</div>
 				<div class="joueurn" id="joueur2">Name 2</div>
 				<div class="joueurn" id="joueur3">Name 3</div>
-				<div class="joueurn" id="joueur4"><s>Name 4</s></div>
+				<div class="joueurn" id="joueur4">Name 4</div>
 				<div class="joueurn" id="joueur5">Name 5</div>
 				<div class="joueurn" id="joueur6">Name 6</div>
-				<div class="joueurn" id="joueur7"><s>Name 7</s></div>
+				<div class="joueurn" id="joueur7">Name 7</div>
 				<div class="joueurn" id="joueur8">Name 8</div>
 				<div class="joueurn" id="joueur9">Name 9</div>
 				<div class="joueurn" id="joueur10">Name 10</div>
@@ -45,10 +52,13 @@
 				<div class="joueurn" id="joueur12">Name 12</div>
 				<div class="joueurn" id="joueur13">Name 13</div>
 				<div class="joueurn" id="joueur14">Name 14</div>
-				<div class="joueurn" id="joueur15"><s>Name 15</s></div>
+				<div class="joueurn" id="joueur15">Name 15</div>
 			</div>
 		</div>
 
 	</div>
+
+	<script src="./app.js"></script>
 </body>
+
 </html>
