--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<header>
 			<h1>Consigne</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur neque atque suscipit assumenda ratione esse error ad dicta mollitia quia, minima cupiditate laborum cumque rem. Doloribus cupiditate dicta vero.</p>
+			<input></input>
 		</header>
 
 		<div>
