Boutons pause et stop

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 			<div id="jauge">
 				<div id="prog"></div>
 			</div>
-			<button id="lancer">Lancer</button>
 
-			<div id="roles" class="container2">
+			<div id="boutons">
+				<button id="lancer">Lancer</button>
+				<button id="pause">Pause</button>
+				<button id="stop">Stop</button>
+			</div>
+
+			<section id="roles">
 				<div class="role" id="uke">
 					<h3>UKE</h3>
 					<p class="pr">Name 7</p>
@@ -36,8 +41,9 @@
 					<h3>Suivant</h3>
 					<p class="pr">Name 4</p>
 				</div>
-			</div>
-			<div id="joueurs" class="container3">
+			</section>
+
+			<section id="joueurs">
 				<div class="joueurn" id="joueur1">Name 1</div>
 				<div class="joueurn" id="joueur2">Name 2</div>
 				<div class="joueurn" id="joueur3">Name 3</div>
@@ -53,7 +59,7 @@
 				<div class="joueurn" id="joueur13">Name 13</div>
 				<div class="joueurn" id="joueur14">Name 14</div>
 				<div class="joueurn" id="joueur15">Name 15</div>
-			</div>
+			</section>
 		</div>
 
 	</div>
