--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 	</div>
 
-
+	<script src="node_modules/mustache/mustache.js"></script>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
