premier tirage + PPP

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
 	<div class="container">
 		<header>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur neque atque suscipit assumenda ratione esse error ad dicta mollitia quia, minima cupiditate laborum cumque rem. Doloribus cupiditate dicta vero.</p>
-			<button id="tirage" onclick="tirageAleatoire()"> Tirage... </button>
+			<h1>Le RandoriZator !</h1>
 		</header>
 
 		<div>
@@ -22,6 +21,7 @@
 			</div>
 
 			<div id="boutons">
+				<button id="ukeTori" onclick="ukeTori()">Uké Tori</button>
 				<button id="lancer">Lancer</button>
 				<button id="pause">Pause</button>
 				<button id="stop">Stop</button>
@@ -30,15 +30,15 @@
 			<section id="roles">
 				<div class="role" id="uke">
 					<h3>UKE</h3>
-					<p class="pr">Name 7</p>
+					<p class="pr"></p>
 				</div>
 				<div class="role" id="tori">
 					<h3>TORI</h3>
-					<p class="pr">Name 15</p>
+					<p class="pr"></p>
 				</div>
 				<div class="role" id="suivant">
-					<h3>Suivant</h3>
-					<p class="pr">Name 4</p>
+					<h3><strong> ? </strong></h3>
+					<p class="pr"></p>
 				</div>
 			</div>
 			<div id="joueurs" class="container3">
